--- a/whatisnewdialog/src/main/res/layout/newfeaturedialog.xml
+++ b/whatisnewdialog/src/main/res/layout/newfeaturedialog.xml
@@ -17,7 +17,7 @@
         app:dotGap="8dp"
         app:pageIndicatorColor="@color/colorPrimary" />
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
