adding option for palette usage where users can be able to set to use palette or not. Also new version released with gradle updates

--- a/whatisnewdialog/src/main/res/layout/item_view_pager_image.xml
+++ b/whatisnewdialog/src/main/res/layout/item_view_pager_image.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -50,15 +51,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
-                android:text="Title"
+                android:textColor="?android:attr/textColorPrimary"
                 android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:text="Title" />
 
             <TextView
                 android:id="@+id/textViewDesc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Description To Here" />
+                android:textColor="?android:attr/textColorPrimary"
+                tools:text="Description To Here" />
 
         </LinearLayout>
     </ScrollView>
